Implement trap command module
